<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:paddingRight="16dp"
    android:background="@android:color/holo_orange_dark"
    tools:context=".login_register.MainActivityRegister">



    <View
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </View>


    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="314dp"
        android:layout_height="200dp"
        android:src="@drawable/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-46dp" />

    <TextView
        android:id="@+id/tv_meuLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="50sp"
        android:fontFamily="casual"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"/>

    <TextView
        android:id="@+id/tv_email_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/email"
        android:fontFamily="casual"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_meuLogin"
        app:layout_constraintStart_toStartOf="@+id/iv_image" />

    <EditText
        android:id="@+id/et_email_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="text"
        android:maxLength="40"
        android:maxLines="1"
        android:layout_marginStart="6dp"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toEndOf="@+id/tv_email_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_meuLogin"/>

    <TextView
        android:id="@+id/tv_senha_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/senha"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email_register"
        app:layout_constraintStart_toStartOf="@id/tv_email_register"/>

    <EditText
        android:id="@+id/et_senha_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/holo_orange_dark"
        android:maxLength="40"
        app:layout_constraintTop_toBottomOf="@id/tv_email_register"
        app:layout_constraintStart_toEndOf="@+id/tv_senha_register" />

    <TextView
        android:id="@+id/tv_telefone_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/telefone"
        android:textColor="@color/white"
        android:fontFamily="casual"
        app:layout_constraintTop_toBottomOf="@id/tv_senha_register"
        app:layout_constraintStart_toStartOf="@id/tv_senha_register"/>

    <EditText
        android:id="@+id/et_telefone_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="9"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="15"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintTop_toBottomOf="@id/tv_senha_register"
        app:layout_constraintStart_toEndOf="@+id/tv_telefone_register"/>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_orange_dark"
        android:text="Registrar"
        android:clickable="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="casual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_telefone_register"/>

    <TextView
        android:id="@+id/tv_possui_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/ja_possui_login"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrar" />

    <TextView
        android:id="@+id/tv_realizar_login"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/login_existent"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_marginTop="1dp"
        android:clickable="true"
        android:layout_marginStart="4dp"
        android:textSize="12sp"
        android:fontFamily="casual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_possui_login"/>

    <TextView
        android:id="@+id/tv_forgot_senha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="casual"
        android:text="@string/forgot_senha"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_possui_login"
        />

    <TextView
        android:id="@+id/tv_recuperar_senha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:clickable="true"
        android:fontFamily="casual"
        android:text="@string/recuperar_senha"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_senha" />

    <ImageView
        android:id="@+id/iv_image2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/girafa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recuperar_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>