<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:paddingRight="16dp"
    tools:context=".login_register.MainActivityLogin"
    android:background="@android:color/holo_orange_dark">

    <View
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="314dp"
        android:layout_height="200dp"
        android:src="@drawable/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-46dp" />

    <TextView
        android:id="@+id/tv_meuLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/login_existent"
        android:textStyle="bold"
        android:textSize="50sp"
        android:fontFamily="casual"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"/>

    <TextView
        android:id="@+id/tv_emailLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_meuLogin"
        app:layout_constraintStart_toStartOf="@id/iv_image"/>

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/holo_orange_dark"
        android:maxLength="40"
        app:layout_constraintTop_toBottomOf="@id/tv_meuLogin"
        app:layout_constraintStart_toEndOf="@+id/tv_emailLogin" />

    <TextView
        android:id="@+id/tv_senha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/senha"
        android:textColor="@color/white"
        android:fontFamily="casual"
        app:layout_constraintTop_toBottomOf="@id/tv_emailLogin"
        app:layout_constraintStart_toStartOf="@id/tv_emailLogin"/>

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="15"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintTop_toBottomOf="@id/tv_emailLogin"
        app:layout_constraintStart_toEndOf="@+id/tv_senha"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/login_existent"
        android:clickable="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="casual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_senha"/>


    <TextView
        android:id="@+id/tv_forgot_senha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="casual"
        android:text="@string/forgot_senha"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_recuperar_senha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:clickable="true"
        android:fontFamily="casual"
        android:text="@string/recuperar_senha"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_senha" />

    <ImageView
        android:id="@+id/iv_image2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/girafa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recuperar_senha" />
</androidx.constraintlayout.widget.ConstraintLayout>